--- a/loml.html
+++ b/loml.html
@@ -781,9 +781,7 @@
     <div class="footer">
       Forever yours, San ♡<br>
       <small>
-        Music: <a href="https://www.chosic.com/free-music/all/" target="_blank">Chosic</a> & 
-        <a href="https://pixabay.com/music/" target="_blank">Pixabay</a><br>
-        Sound Effects: <a href="https://www.zapsplat.com" target="_blank">Zapsplat.com</a>
+        MWAHHHHHH!
       </small>
     </div>
   </div>
